tests/ui/higher-ranked/higher-ranked-invalid-bounds.stderr
error: bounds cannot be used in this context
  --> $DIR/higher-ranked-invalid-bounds.rs:3:22
   |
LL | type A = for<'b, 'a: 'b> fn();
   |                      ^^

error: bounds cannot be used in this context
  --> $DIR/higher-ranked-invalid-bounds.rs:4:22
   |
LL | type B = for<'b, 'a: 'b,> fn();
   |                      ^^

error: bounds cannot be used in this context
  --> $DIR/higher-ranked-invalid-bounds.rs:5:22
   |
LL | type C = for<'b, 'a: 'b +> fn();
   |                      ^^

error[E0658]: only lifetime parameters can be used in this context
  --> $DIR/higher-ranked-invalid-bounds.rs:6:18
   |
LL | type D = for<'a, T> fn();
   |                  ^
   |
   = note: see issue #108185 <https://github.com/rust-lang/rust/issues/108185> for more information
   = help: add `#![feature(non_lifetime_binders)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: only lifetime parameters can be used in this context
  --> $DIR/higher-ranked-invalid-bounds.rs:7:18
   |
LL | type E = dyn for<T, U> Fn();
   |                  ^  ^
   |
   = note: see issue #108185 <https://github.com/rust-lang/rust/issues/108185> for more information
   = help: add `#![feature(non_lifetime_binders)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 5 previous errors

For more information about this error, try `rustc --explain E0658`.
